# salvo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Contributors.md  ECOSYSTEM.md  FUNDING.json  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.osc.md  README.zh-hans.md  README.zh-hant.md  README.zh.md  README_EN.md  README_ZH.md  SECURITY.md  Sponsors.md  azure-pipelines.yml  netlify.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
core/: Cargo.toml
core/certs/: cert.pem  create-certs.sh  key.pem
core/src/: addr.rs  catcher.rs  content.rs  context.rs  de.rs  depot.rs  error.rs  handler.rs  lib.rs  logging.rs  pick_port.rs  serde.rs  server.rs  service.rs  state.rs  tls.rs  transport.rs  utils.rs  writer.rs
core/tests/: hello_world.rs
crates/acme/: Cargo.toml  README.md
crates/cache/: Cargo.toml  README.md
crates/compression/: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/cors/: Cargo.toml  README.md
crates/craft/: Cargo.toml  README.md
crates/craft-macros/: Cargo.toml  README.md
crates/csrf/: Cargo.toml  README.md
crates/extra/: Cargo.toml
crates/flash/: Cargo.toml  README.md
crates/http3/: Cargo.toml
crates/jwt-auth/: Cargo.toml  README.md
crates/macros/: Cargo.toml
crates/oapi/: Cargo.toml  README.md  build.rs
crates/oapi-macros/: Cargo.toml  README.md
crates/otel/: Cargo.toml  README.md
crates/proxy/: Cargo.toml  README.md
crates/quinn/: Cargo.toml  README.md
crates/rate-limiter/: Cargo.toml  README.md
crates/salvo/: Cargo.toml
crates/serde-util/: Cargo.toml
crates/serve-static/: Cargo.toml  README.md
examples/: Cargo.toml  acme_alpn_01.rs  acme_http_01.rs  acme_tls_alpn01.rs  acme_tls_alpn_01.rs  basic_auth.rs  compression.rs  cors.rs  custom_error_page.rs  custom_filter.rs  file_list.rs  handle_error.rs  hello.rs  hello_world.rs  join_listeners.rs  jwt_auth.rs  logging.rs  multi_servers.rs  native_tls.rs  proxy.rs  remote_addr.rs  routing.rs  rustls_reload.rs  size_limiter.rs  sse.rs  sse_chat.rs  tls.rs  tls_reload.rs  todos.rs  unix_socket.rs  upload.rs  upload_file.rs  upload_files.rs  work_with_tower.rs  ws.rs  ws_chat.rs
examples/__extract-data2/: Cargo.toml
examples/__oapi-test/: Cargo.toml
examples/__test/: Cargo.toml
examples/acme-http01/: Cargo.toml
examples/acme-http01-quinn/: Cargo.toml
examples/acme-tls-alpn01/: Cargo.toml
examples/affix/: Cargo.toml
examples/affix-state/: Cargo.toml
examples/basic-auth/: Cargo.toml
examples/basic_auth/: Cargo.toml
examples/body-channel/: Cargo.toml
examples/cache-simple/: Cargo.toml
examples/caching-headers/: Cargo.toml
examples/catch-error/: Cargo.toml
examples/catch-panic/: Cargo.toml
examples/compression/: Cargo.toml
examples/concurrency-limiter/: Cargo.toml
examples/cors/: Cargo.toml
examples/craft/: Cargo.toml
examples/csrf-cookie-store/: Cargo.toml
examples/csrf-session-store/: Cargo.toml
examples/custom-error-page/: Cargo.toml
examples/custom-filter/: Cargo.toml
examples/db-graphql/: Cargo.toml
examples/db-mongodb/: Cargo.toml
examples/db-mysql-rbatis/: Cargo.toml
examples/db-postgres-diesel/: .env  .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
examples/db-postgres-sea-orm/: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
examples/db-postgres-sqlx/: Cargo.toml
examples/db-prisma-orm/: Cargo.toml  readme.md
examples/db-sea-orm/: Cargo.toml  README.md
examples/db_prisma_orm/: Cargo.toml  readme.md
examples/extract/: Cargo.toml
examples/extract-alias/: Cargo.toml
examples/extract-data/: Cargo.toml
examples/extract-data2/: Cargo.toml
examples/extract-nested/: Cargo.toml
examples/extract-with-lifetimes/: Cargo.toml
examples/file-list/: Cargo.toml
examples/file_list/: Cargo.toml
examples/flash-cookie/: Cargo.toml
examples/flash-cookie-store/: Cargo.toml
examples/flash-session-store/: Cargo.toml
examples/force-https/: Cargo.toml
examples/fuse-attack/: Cargo.toml
examples/graceful-shutdown/: Cargo.toml
examples/graphql/: Cargo.toml
examples/handle-error/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello-h3/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello_world/: Cargo.toml
examples/join-listeners/: Cargo.toml
examples/jwt-auth/: Cargo.toml
examples/jwt-clerk/: Cargo.toml  README.md  jwt_key.pem  package.json  vite.config.js
examples/jwt-oidc-clerk/: .env.local.sample  Cargo.toml  README.md  package.json
examples/logging/: Cargo.toml
examples/logging-otlp/: Cargo.toml  README.md
examples/middleware-add-header/: Cargo.toml
examples/mongodb/: Cargo.toml
examples/multi-servers/: Cargo.toml
examples/mysql-rbatis/: Cargo.toml
examples/native-tls/: Cargo.toml
examples/native-tls-reload/: Cargo.toml
examples/oapi-generics/: Cargo.toml
examples/oapi-hello/: Cargo.toml
examples/oapi-todos/: Cargo.toml  README.md
examples/oapi-upload-file/: Cargo.toml
examples/oapi-upload-files/: Cargo.toml
examples/openssl/: Cargo.toml
examples/openssl-reload/: Cargo.toml
examples/otel-jaeger/: Cargo.toml  README.md
examples/parse-data/: Cargo.toml
examples/postgres-sqlx/: Cargo.toml
examples/proxy/: Cargo.toml
examples/proxy-react-app/: Cargo.toml
examples/proxy-simple/: Cargo.toml
examples/proxy-websocket/: Cargo.toml
examples/rate-limiter/: Cargo.toml
examples/rate-limiter-dynamic/: Cargo.toml
examples/rate-limiter-static/: Cargo.toml
examples/redirect/: Cargo.toml
examples/remote-addr/: Cargo.toml
examples/request-id/: Cargo.toml
examples/routing/: Cargo.toml
examples/routing-guid/: Cargo.toml
examples/rustls/: Cargo.toml
examples/rustls-reload/: Cargo.toml
examples/seaorm/: .gitignore  Cargo.toml  README.md
examples/session-login/: Cargo.toml
examples/size-limiter/: Cargo.toml
examples/sse/: Cargo.toml
examples/sse-chat/: Cargo.toml
examples/static-dir-list/: Cargo.toml
extra/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md
macro/: Cargo.toml
macros/: Cargo.toml
salvo/: Cargo.toml
(+1306 files in other folders)
