[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.53.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
rust-version = "1.67"
description = """
Salvo is a powerful web framework that can make your work easier.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
documentation = "https://docs.rs/salvo/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[workspace.dependencies]
aead = "0.5"
aes-gcm = "0.10"
anyhow = "1"
async-session = "3"
async-trait = "0.1"
assert-json-diff = "2"
base64 = "0.21"
bson = "2"
bytes = "1"
bcrypt = "0.15"
cookie = "0.17"
chacha20poly1305 = "0.10"
chrono = "0.4"
cruet = "0.13"
encoding_rs = "0.8"
email_address = "0.2"
enumflags2 = "0.7"
etag = "4"
eyre = "0.6"
fastrand = "2"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
headers = "0.3"
http = "0.2"
http-body-util = "0.1.0-rc.3"
hmac = "0.12"
hex = "0.4"
hostname-validator = "1"
hyper = "=1.0.0-rc.4"
indexmap = "2"
inventory = "0.3"
jsonwebtoken = "8"
lru = "0.11"
mime = "0.3"
mime_guess = "2"
moka = "0.11"
multer = "2"
multimap = "0.9"
native-tls = "0.2"
num-traits = "0.2"
once_cell = "1"
openssl = "0.10"
opentelemetry-http = { version = "0.9", default-features = false }
opentelemetry-semantic-conventions = { version = "0.12", default-features = false }
opentelemetry-prometheus = { version = "0.13", default-features = false }
opentelemetry = { version = "0.20", default-features = false }
parking_lot = "0.12"
path-slash = "0.2"
percent-encoding = "2"
pin-project = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
proc-macro2 = "1"
quinn = { version = "0.10", default-features = false }
quote = "1"
rand = "0.8"
rcgen = "0.11"
regex = "1"
reqwest = "0.11"
ring = "0.16"
rust_decimal = "1"
rustls = "0.21"
rustls-pemfile = "1"
rust-embed = {version = ">= 6, <= 8"}
salvo-utils = { version = "0.0.5", default-features = true }
salvo_macros = { version = "0.53.0", path = "crates/macros", default-features = false }
salvo_core = { version = "0.53.0", path = "crates/core", default-features = false }
salvo_extra = { version = "0.53.0", path = "crates/extra", default-features = false }
salvo-compression = { version = "0.53.0", path = "crates/compression", default-features = false }
salvo-cache = { version = "0.53.0", path = "crates/cache", default-features = false }
salvo-cors = { version = "0.53.0", path = "crates/cors", default-features = false }
salvo-csrf = { version = "0.53.0", path = "crates/csrf", default-features = false }
salvo-flash = { version = "0.53.0", path = "crates/flash", default-features = false }
salvo-http3 = { version = "0.0.4", default-features = false }
salvo-jwt-auth = { version = "0.53.0", path = "crates/jwt-auth", default-features = false }
salvo-oapi = { version = "0.53.0", path = "./crates/oapi", default-features = false }
salvo-oapi-macros = { version = "0.53.0", path = "crates/oapi-macros", default-features = false }
salvo-otel = { version = "0.53.0", path = "crates/otel", default-features = false }
salvo-proxy = { version = "0.53.0", path = "crates/proxy", default-features = false }
salvo-rate-limiter = { version = "0.53.0", path = "crates/rate-limiter", default-features = false }
salvo-serve-static = { version = "0.53.0", path = "crates/serve-static", default-features = false }
salvo-session = { version = "0.53.0", path = "crates/session", default-features = false }
serde = "1"
serde_json = "1"
serde-xml-rs = "0.6"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sha2 = "0.10"
smallvec = "1"
syn = "2"
tempfile = "3"
textnonce = "1"
thiserror = "1"
time = "0.3"
tokio = "1"
tokio-native-tls = "0.3"
tokio-rustls = "0.24"
tokio-openssl = "0.6"
tokio-stream = { version = "0.1", default-features = false }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.20", default-features = false }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
tracing-test = "0.2.1"
ulid = { version = "1", default-features = false }
url = "2"
uuid = "1"
x509-parser = "0.15"

# Compress
brotli = { version = "3.3", default-features = false }
flate2 = { version = "1.0", default-features = false }
zstd = { version = "0.12", default-features = false }
