[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.77.1"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
rust-version = "1.85"
description = """
Salvo is a powerful web framework that can make your work easier.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
documentation = "https://docs.rs/salvo/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[workspace.dependencies]
salvo_macros = { version = "0.77.1", path = "crates/macros", default-features = false }
salvo_core = { version = "0.77.1", path = "crates/core", default-features = false }
salvo_extra = { version = "0.77.1", path = "crates/extra", default-features = false }
salvo-compression = { version = "0.77.1", path = "crates/compression", default-features = false }
salvo-cache = { version = "0.77.1", path = "crates/cache", default-features = false }
salvo-cors = { version = "0.77.1", path = "crates/cors", default-features = false }
salvo-csrf = { version = "0.77.1", path = "crates/csrf", default-features = false }
salvo-flash = { version = "0.77.1", path = "crates/flash", default-features = false }
salvo-http3 = { version = "0.5.0", default-features = false }
salvo-jwt-auth = { version = "0.77.1", path = "crates/jwt-auth", default-features = false }
salvo-oapi = { version = "0.77.1", path = "./crates/oapi", default-features = false }
salvo-oapi-macros = { version = "0.77.1", path = "crates/oapi-macros", default-features = false }
salvo-otel = { version = "0.77.1", path = "crates/otel", default-features = false }
salvo-proxy = { version = "0.77.1", path = "crates/proxy", default-features = false }
salvo-rate-limiter = { version = "0.77.1", path = "crates/rate-limiter", default-features = false }
salvo-serde-util = { version = "0.77.1", path = "crates/serde-util", default-features = true }
salvo-serve-static = { version = "0.77.1", path = "crates/serve-static", default-features = false }
salvo-session = { version = "0.77.1", path = "crates/session", default-features = false }
salvo-craft = { version = "0.77.1", path = "crates/craft", default-features = false }
salvo-craft-macros = { version = "0.77.1", path = "crates/craft-macros", default-features = false }

aead = "0.5"
aes-gcm = "0.10"
anyhow = "1"
async-session = "3"
async-trait = "0.1"
assert-json-diff = "2"
base64 = "0.22"
bson = "2"
bytes = "1"
bcrypt = "0.17"
cookie = "0.18"
chacha20poly1305 = "0.10"
chrono = "0.4"
encoding_rs = "0.8"
email_address = "0.2"
enumflags2 = "0.7"
etag = "4"
eyre = "0.6"
fastrand = "2"
form_urlencoded = "1"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
headers = "0.4"
http = "1"
http-body-util = "0.1"
hmac = "0.12"
hex = "0.4"
hostname-validator = "1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = { version = "0.1", default-features = true }
indexmap = "2"
inventory = "0.3"
jsonwebtoken = "9"
mime = "0.3"
mime-infer = "3"
moka = "0.12"
multer = "3"
multimap = "0.10"
native-tls = "0.2"
nix = { version = "0.29", default-features = false }
openssl = { version = "0.10" }
opentelemetry = { version = "0.29", default-features = false }
opentelemetry-http = { version = "0.29", default-features = false }
opentelemetry-prometheus = { version = "0.29", default-features = false }
opentelemetry-semantic-conventions = { version = "0.29", default-features = false }
parking_lot = "0.12"
path-slash = "0.2"
percent-encoding = "2"
paste = "1"
pin-project = "1"
proc-macro-crate = { version = ">= 2, <= 4" }
proc-macro2-diagnostics = { version = "0.10", default-features = true }
proc-macro2 = "1"
quinn = { version = "0.11", default-features = false }
quote = "1"
rand = "0.9"
rcgen = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration"] }
ring = "0.17"
rust_decimal = "1"
rustls = "0.23"
rustls-pemfile = "2"
rust-embed = { version = ">= 6, <= 9" }
serde = "1"
serde_json = "1"
serde-xml-rs = "0.6"
serde_urlencoded = "0.7"
serde_norway = "0.9"
serde_with = "3"
sha2 = "0.10"
smallvec = "1"
socket2 = "0.5"
syn = "2"
sync_wrapper = "1"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = "1"
tokio-native-tls = "0.3"
tokio-rustls = { version = "0.26", default-features = false }
tokio-openssl = "0.6"
tokio-stream = { version = "0.1", default-features = false }
tokio-tungstenite = { version = "0.26", default-features = false }
tokio-util = "0.7"
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
tracing-test = "0.2.1"
ulid = { version = "1", default-features = false }
url = "2"
uuid = "1"
x509-parser = "0.17"
compact_str = { version = "0.9", features = ["serde"] }

# Compress
brotli = { version = "7", default-features = false }
flate2 = { version = "1", default-features = false }
zstd = { version = "0.13", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
future_not_send = "warn"
unwrap_used = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
