[package]
name = "salvo_core"
version = "0.22.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>", "driftluo <driftluo@foxmail.com>"]
edition = "2021"
description = """
Salvo is a powerful and simplest web server framework in Rust world.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
readme = "../README.md"
keywords = ["salvo", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "asynchronous", "web-programming::http-server", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = ["rustls", "anyhow"]
rustls = ["tokio-rustls", "rustls-pemfile"]
native-tls = ["tokio-native-tls"]
unix = []
acme = ["base64", "hyper/client", "hyper-rustls", "rcgen", "ring", "x509-parser", "tokio-rustls", "rustls-pemfile"]

[dependencies]
anyhow = { version = "1", optional = true }
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"] }
async-trait = "0.1"
base64 = { version = "0.13", optional = true }
bitflags = "1"
bytes = "1"
cookie = { version = "0.16", features = ["percent-encode"] }
encoding_rs = "0.8"
fastrand = "1.5"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
headers = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
hyper-rustls = { version = "0.23", optional = true }
mime = "0.3"
mime_guess = "2"
multer = "2"
multimap = { version = "0.8", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12.0"
percent-encoding = "2"
pin-project-lite = "0.2"
rcgen = { version = "0.9", optional = true }
regex = "1"
ring = { version = "0.16", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
salvo_macros = { version = "0.22", path = "../macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
textnonce = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tracing = "0.1"
x509-parser = { version = "0.13", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
