[workspace]
members = ["*"]
exclude = ["db-prisma-orm", "target", "temp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
publish = false
rust-version = "1.70"
description = """
Salvo is a powerful web framework that can make your work easier.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
documentation = "https://docs.rs/salvo/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[workspace.dependencies]
anyhow = "1"
rbatis = "4.5.22"
rbdc = "4.5.32"
rbdc-mysql = "4.5.7"
rbs = "4.3"
async-std = "1.12"
async-trait = "0.1"
hyper = "1"
sea-orm = "0.12"
sea-orm-migration = "0.12"
eyre = "0.6"
tera = "1.3"
futures = "0.3"
opentelemetry = "0.22.0"
opentelemetry-http = "0.11.0"
opentelemetry-otlp = {version = "0.15.0" }
opentelemetry-prometheus = "0.15.0"
opentelemetry_sdk = "0.22.1"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-util = { version = "0.3", default-features = true }
jsonwebtoken = "9"
once_cell = "1"
parking_lot = "0.12"
salvo = { path = "../crates/salvo", default-features = true }
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.1"
url = "2"
chrono = "0.4"
sqlx = "0.7"
rust-embed = "8"
time = "0.3"