[workspace]
members = ["*"]
exclude = ["todos-utoipa", "target", "temp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
publish = false
rust-version = "1.85"
description = """
Salvo is a powerful web framework that can make your work easier.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
documentation = "https://docs.rs/salvo/"
readme = "./README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]

[workspace.dependencies]
anyhow = "1.0.100"
diesel = { version = "2.3.4" }
r2d2 = "0.8.10"
rbatis = "4.6.12"
rbdc = "4.6.2"
rbdc-mysql = "4.6.2"
rbs = "4.5"
async-trait = "0.1.89"
sea-orm = "1.1.19"
sea-orm-migration = "1.1.19"
eyre = "0.6.12"
tera = "1.20.1"
futures = "0.3.31"

opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-http = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32.0"

argon2 = "0.4.1"
dotenvy = "0.15.6"
rand_core = "0.6.4"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-util = { version = "0.3.31", default-features = true }
jsonwebtoken = "10.2.0"
parking_lot = "0.12.5"
password-hash = "0.4.1"
reqwest = "0.12.24"
salvo = { path = "../crates/salvo", default-features = true }
serde = "1.0.228"
serde_json = "1"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
url = "2.5.7"
chrono = "0.4"
sqlx = "0.8"
rust-embed = "8.9.0"
time = "0.3.44"
uuid = "1.18.1"

async-std = "1.13.2"
juniper = { version = "0.15.10"}
tower = "0.5.2"