[package]
name = "salvo_extra"
version = "0.24.2"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
description = """
Salvo is a powerful and simplest web server framework in Rust world.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
readme = "../README.md"
keywords = ["salvo", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["network-programming", "asynchronous", "web-programming::http-server", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full"]
full = ["basic-auth", "jwt-auth", "compression", "cors", "csrf", "logging", "proxy", "serve-static", "sse", "session", "size-limiter", "timeout", "ws"]
basic-auth = ["base64"]
jwt-auth = ["jsonwebtoken", "once_cell", "serde"]
compression = ["async-compression", "tokio", "tokio-stream", "tokio-util", "tracing"]
cors = ["tracing"]
csrf = ["cookie", "hkdf", "rand", "sha2", "aead", "aes-gcm", "byteorder", "chacha20poly1305", "chrono", "data-encoding", "hmac", "tracing"]
size-limiter = []
logging = ["tracing"]
proxy = ["hyper", "hyper-rustls/webpki-tokio", "percent-encoding", "tracing"]
serve-static = ["chrono", "mime", "percent-encoding", "tokio", "serde", "serde_json"]
session = ["async-session", "cookie", "tracing"]
sse = ["futures-util", "pin-project", "tokio", "serde", "serde_json", "tracing"]
timeout = ["tokio/macros"]
ws = ["futures-util", "tokio", "tokio-tungstenite", "tracing"]

[dependencies]
aead = { version = "0.4", optional = true }
aes-gcm = { version = "0.9", optional = true }
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"], optional = true }
async-session = { version = "3", optional = true }
base64 = { version = "0.13", optional = true }
byteorder = { version = "1", optional = true }
chacha20poly1305 = { version = "0.9", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
cookie = { version = "0.16", features = ["percent-encode", "signed"], optional = true }
data-encoding = { version = "2.0.0", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"], optional = true }
hyper-rustls = { version = "0.23", features = ["http1", "http2"], optional = true }
jsonwebtoken = { version = "8", optional = true }
mime = { version = "0.3", optional = true }
once_cell = { version = "1", optional = true }
percent-encoding = { version = "2", optional = true }
pin-project = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
salvo_core = { version = "0.24", default-features = false, path = "../core" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.17", default-features = false, optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
salvo_core = { features = ["test"], path = "../core" }
tracing-test = "0.2.1"
