[package]
name = "salvo_extra"
version = "0.34.3"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2021"
description = """
Salvo is a powerful and simplest web server framework in Rust world.
"""
homepage = "https://salvo.rs"
repository = "https://github.com/salvo-rs/salvo"
readme = "../README.md"
keywords = ["http", "async", "web", "framework", "server"]
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["full"]
full = ["affix", "basic-auth", "caching-headers", "force-https", "jwt-auth", "compression", "cors", "csrf", "logging", "proxy", "serve-static", "sse", "session", "size-limiter", "trailing-slash", "timeout", "ws"]
affix = []
basic-auth = ["dep:base64"]
caching-headers = ["dep:etag"]
compression = ["dep:async-compression", "dep:bytes", "tokio", "dep:tokio-stream", "dep:tokio-util", "dep:tracing"]
cors = ["dep:tracing"]
csrf = ["dep:cookie", "dep:hkdf", "dep:rand", "dep:sha2", "dep:aead", "dep:aes-gcm", "dep:byteorder", "dep:chacha20poly1305", "dep:chrono", "dep:data-encoding", "dep:hmac", "dep:tracing"]
force-https = []
jwt-auth = ["dep:jsonwebtoken", "dep:once_cell", "dep:serde", "salvo_core/cookie"]
logging = ["dep:tracing"]
proxy = ["dep:fastrand", "dep:hyper", "hyper-rustls/webpki-tokio", "dep:once_cell", "tokio", "dep:tracing"]
serve-static = ["dep:chrono", "dep:hex", "dep:mime", "dep:mime_guess", "dep:percent-encoding", "dep:rust-embed", "tokio", "dep:serde", "dep:serde_json"]
session = ["dep:async-session", "dep:cookie", "dep:tracing"]
size-limiter = []
sse = ["dep:futures-util", "dep:pin-project", "tokio", "dep:serde", "dep:serde_json", "dep:tracing"]
trailing-slash = []
timeout = ["tokio/macros"]
ws = ["dep:futures-util", "dep:hyper", "tokio-tungstenite", "dep:tracing"]

[dependencies]
aead = { version = "0.5", features = ["alloc"], optional = true }
aes-gcm = { version = "0.10", optional = true }
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"], optional = true }
async-session = { version = "3", optional = true }
base64 = { version = "0.13", optional = true }
byteorder = { version = "1", optional = true }
bytes = { version = "1", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
cookie = { version = "0.16", features = ["percent-encode", "signed"], optional = true }
data-encoding = { version = "2", optional = true }
etag = { version = "3", features = ["std"], optional = true }
fastrand = { version = "1", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
hex = { version = "0.4", optional = true }
hkdf = { version = "0.12", optional = true }
hmac = { version = "0.12", optional = true }
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"], optional = true }
hyper-rustls = { version = "0.23", features = ["http1", "http2"], optional = true }
jsonwebtoken = { version = "8", optional = true }
mime = { version = "0.3", optional = true }
mime_guess = { version = "2", optional = true }
once_cell = { version = "1", optional = true }
percent-encoding = { version = "2", optional = true }
pin-project = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
rust-embed = { version = "6", optional = true }
salvo_core = { version = "0.34.3", default-features = false, path = "../core" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.17", default-features = false, optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
salvo_core = { features = ["test"], path = "../core" }
tracing-test = "0.2.1"
reqwest = "0.11"
