[package]
name = "salvo_macro"
version = "0.2.10"
authors = ["Chrislearn Young <chrislearn@hotmail.com>"]
edition = "2018"
description = "salvo proc macros"
homepage = "https://github.com/kenorld/salvo"
repository = "https://github.com/kenorld/salvo/macros"
readme = "../README.md"
keywords = ["salvo", "web", "framework", "server"]
license = "MIT"
categories = ["web-programming::http-server"]

[lib]
name = "salvo_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-quote = "0.3.2"
syn = { version = "1.0.45", features = ["full", "parsing"] }
proc-macro2 = "1.0.24"

# [dev-dependencies]
# salvo = { version = "0.1", path="../core"}
# futures = { version = "0.3.1" }
